Fixing some problems

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- SLIDER -->
     <div class="slider">
         <div class="slide fade">
-            <img src="assets/images/slider1.jpg" alt="Slide 1">
+            <img src="assets/images/slider1.jpg">
             <div class="text">
                 <h2>Nest One</h2>
                 <p>The central and tallest tower complex consists of 51 floors and includes residential apartments, offices, restaurants, sports areas and other public spaces.</p>
@@ -37,7 +37,7 @@
             </div>
         </div>
         <div class="slide fade">
-            <img src="assets/images/slider2.jpg" alt="Slide 2">
+            <img src="assets/images/slider2.jpg">
             <div class="text">
                 <h2>Cambridge Residence</h2>
                 <p>Imagining a happy life, a family that is happy and comfortable always appears before your eyes, and Cambridge Residence is the ideal place for a comfortable and safe life for your family.</p>
@@ -45,7 +45,7 @@
             </div>
         </div>
         <div class="slide fade">
-            <img src="assets/images/slider3.jpg" alt="Slide 3">
+            <img src="assets/images/slider3.jpg">
             <div class="text">
                 <h2>Felicita</h2>
                 <p>is a project by the development company Murad Buildings, carried out jointly with Italian architects. Felicita translated as “happiness”, is a 6-storey complex in the style of European classicism.</p>
