--- a/pages/projects.html
+++ b/pages/projects.html
@@ -39,14 +39,14 @@
             <h2>Project: Cambridge Residence</h2>
 
             <div class="project">
-                <img src="../assets/images/slider2.JPG" >
+                <img src="../assets/images/slider2.jpg" >
                 <p>New premium urban residential complex - Cambridge Residence Commercial! Located in the center of Tashkent, this complex is a modern building with terraces and luxury apartments, providing a comfortable life in a bustling city. The facades of the building are covered with foliage, giving the building a unique look, and the underground parking provides convenient and safe parking for all residents. Cambridge Residence Commercial has a well-developed commercial infrastructure that allows residents to work, relax and shop without leaving the building. The complex offers a wide range of additional services, including concierge service, which provides a high level of comfort for all residents.</p>
             </div>
         </section>
         <section class="project-section">
             <h2>Project: Felicita</h2>
             <div class="project">
-                <img src="../assets/images/slider3.JPG" >
+                <img src="../assets/images/slider3.jpg" >
                 <p>These are the only 6-storey houses in Uzbekistan in the style of Italian classicism, built in collaboration with Italian architects. This complex offers a unique combination of modern design and traditional Italian elements. In addition to the excellent design, during the construction of the building, we worked separately on safety and comfort. For those who appreciate the aesthetics of the Italian style, have a special taste and love the European atmosphere, buying in these houses is an excellent solution.</p>
             </div>
         </section>
@@ -55,7 +55,7 @@
 
     <!-- BOTTOM -->
 
-    <div class="bottom-container">
+    <div class="bottom">
         <div>
             <img src="../assets/images/Instagram_logo.webp", width="30">
             <img src="../assets/images/telegrem_logo.webp", width="30">
