--- a/pages/contact.html
+++ b/pages/contact.html
@@ -15,7 +15,7 @@
         </div>
         <div class="menu">
             <a href="../index.html">Home</a>
-            <a href="pages/projects.html">Projects</a>
+            <a href="projects.html">Projects</a>
             <a href="about_us.html">About Us</a>
             <a href="login_page.html", class="last_feeature">Log In</a>
         </div>
